# orion

./: .env.example  .gitignore  README.md  boards.json  claudecode.py  eslint.config.js  mykey.template.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.check.json  tsconfig.json
.superpowers/brainstorm/: .last-token
.superpowers/sdd/2026-07-25-orion-agent-loop-implementation/: fix-report.md
apps/cli/: package.json  tsconfig.json
apps/cli/src/: main.ts
apps/desktop/: package.json  tsconfig.sidecar.json
apps/desktop/sidecar/: agent-manager.ts  chat-sidecar.ts  config.ts  desktop-pet-v2.ts  desktop-pet.ts  router.ts  sse.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  sidecar.rs
apps/desktop/ui/: index.html  package.json  tsconfig.json  vite.config.ts
apps/gateway/: package.json  tsconfig.json
apps/gateway/src/: dingtalk.ts  discord.ts  feishu.ts  index.ts  qq.ts  telegram.ts  wechat.ts  wecom.ts
assets/: sys_prompt.txt  sys_prompt_en.txt  tools_schema.json  tools_schema_cn.json
assets/tmwd_cdp_bridge/: config.js
docs/: desktop-redesign-spec.md
docs/superpowers/plans/: 2026-07-22-orion-refactor-plan.md  2026-07-22-settings-modal-plan.md  2026-07-22-sidebar-redesign-plan.md  2026-07-22-theme-plan.md  (+2 more)
memory/: global_mem.txt  global_mem_insight.txt  subagent.md
spec/: chat-response-stability-spec.md  desktop-reflect-integration.md  llm-reply-rendering-architecture.md  session-working-directory.md
(+48 files in other folders)
